--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,8 @@ composeFoundation = "1.7.0"
 dagger = "2.53.1"
 datastore = "1.1.0"
 espresso = "3.5.1"
+exoplayer = "1.7.1"
+ffmpeg = "0.5.4"
 firebaseBom = "33.8.0"
 gms-service-ads = "23.2.0"
 hilt = "1.2.0"
@@ -81,6 +83,7 @@ compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 
 # Coil
 coil = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
+coil-video = { group = "io.coil-kt", name = "coil-video", version.ref = "coil" }
 
 # Coroutine
 coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "kotlin-coroutine" }
@@ -93,6 +96,14 @@ dagger-hilt-android-test = { group = "com.google.dagger", name = "hilt-android-t
 
 # Datastore
 datastore = { group = "androidx.datastore", name = "datastore", version.ref = "datastore" }
+
+# ExoPlayer Media3
+exoplayer = { group = "androidx.media3", name = "media3-exoplayer", version.ref = "exoplayer" }
+exoplayer-ui-compose = { group = "androidx.media3", name = "media3-ui-compose", version.ref = "exoplayer" }
+exoplayer-common = { group = "androidx.media3", name = "media3-common", version.ref = "exoplayer" }
+
+# FFmpeg
+ffmpeg-kit = { group = "com.arthenica", name = "ffmpeg-kit-audio", version.ref = "ffmpeg" }
 
 # Firebase
 firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebaseBom" }
@@ -160,6 +171,7 @@ billing = ["billing-client", "billing-ktx"]
 compose = ["compose-material3", "compose-foundation", "compose-ui", "compose-ui-preview", "compose-animation"]
 composeAdaptive = ["compose-material3-adaptive", "compose-material3-adaptive-layout", "compose-material3-adaptive-navigation", "compose-material3-adaptive-navigation-suite"]
 coroutines = ["coroutines-core"]
+exoplayer = ["exoplayer", "exoplayer-ui-compose", "exoplayer-common"]
 firebase = ["firebase-analytics", "firebase-crashlytics"]
 kotest = ["io-kotest-junit", "io-kotest-assertions"]
 lifecycle = ["lifecycle-compose", "lifecycle-viewmodel-ktx", "lifecycle-runtime-ktx", "lifecycle-runtime-compose", "lifecycle-service"]
