--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -30,11 +30,13 @@ lifecycle-common = "2.6.1"
 lottie = "6.3.0"
 mockk = "1.13.5"
 navigation = "2.8.7"
-okhttp3 = "4.12.0"
+okhttp = "4.12.0"
 playInApp = "2.1.0"
 protobuf = "3.25.0"
-retrofit2 = "2.9.0"
+retrofit = "3.0.0"
 room = "2.7.1"
+tensorflowLiteSupport = "0.5.0"
+tensorflowLiteGpu = "2.17.0"
 
 # plugin
 agp = "8.6.0"
@@ -83,7 +85,6 @@ compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 
 # Coil
 coil = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
-coil-video = { group = "io.coil-kt", name = "coil-video", version.ref = "coil" }
 
 # Coroutine
 coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "kotlin-coroutine" }
@@ -99,11 +100,11 @@ datastore = { group = "androidx.datastore", name = "datastore", version.ref = "d
 
 # ExoPlayer Media3
 exoplayer = { group = "androidx.media3", name = "media3-exoplayer", version.ref = "exoplayer" }
-exoplayer-ui-compose = { group = "androidx.media3", name = "media3-ui-compose", version.ref = "exoplayer" }
 exoplayer-common = { group = "androidx.media3", name = "media3-common", version.ref = "exoplayer" }
-
-# FFmpeg
-ffmpeg-kit = { group = "com.arthenica", name = "ffmpeg-kit-audio", version.ref = "ffmpeg" }
+exoplayer-common-ktx = { group = "androidx.media3", name = "media3-common-ktx", version.ref = "exoplayer" }
+exoplayer-effect = { group = "androidx.media3", name = "media3-effect", version.ref = "exoplayer" }
+exoplayer-transformer = { group = "androidx.media3", name = "media3-transformer", version.ref = "exoplayer" }
+exoplayer-ui-compose = { group = "androidx.media3", name = "media3-ui-compose", version.ref = "exoplayer" }
 
 # Firebase
 firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebaseBom" }
@@ -149,10 +150,10 @@ room-testing = { group = "androidx.room", name = "room-testing", version.ref = "
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 
 # Square
-square-retrofit2 = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit2" }
-square-retrofit2-converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit2" }
-square-retrofit2-converter-scalars = { group = "com.squareup.retrofit2", name = "converter-scalars", version.ref = "retrofit2" }
-square-okhttp3-intercepter = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttp3" }
+square-retrofit2 = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
+square-retrofit2-converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit" }
+square-retrofit2-converter-scalars = { group = "com.squareup.retrofit2", name = "converter-scalars", version.ref = "retrofit" }
+square-okhttp3-intercepter = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttp" }
 
 # Test
 coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "kotlin-coroutine" }
@@ -165,16 +166,21 @@ junit-jupiter-engine = { group = "org.junit.jupiter", name = "junit-jupiter-engi
 test-espresso = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso" }
 test-ext = { group = "androidx.test.ext", name = "junit", version.ref = "android-test-ext" }
 
+# Tensorflow-lite
+tensorflow-lite-support = { group = "org.tensorflow", name = "tensorflow-lite-support", version.ref = "tensorflowLiteSupport" }
+tensorflow-lite-gpu = { group = "org.tensorflow", name = "tensorflow-lite-gpu", version.ref = "tensorflowLiteGpu" }
+
 [bundles]
 
 billing = ["billing-client", "billing-ktx"]
 compose = ["compose-material3", "compose-foundation", "compose-ui", "compose-ui-preview", "compose-animation"]
 composeAdaptive = ["compose-material3-adaptive", "compose-material3-adaptive-layout", "compose-material3-adaptive-navigation", "compose-material3-adaptive-navigation-suite"]
 coroutines = ["coroutines-core"]
-exoplayer = ["exoplayer", "exoplayer-ui-compose", "exoplayer-common"]
+exoplayer = ["exoplayer", "exoplayer-common", "exoplayer-common-ktx", "exoplayer-effect", "exoplayer-transformer", "exoplayer-ui-compose"]
 firebase = ["firebase-analytics", "firebase-crashlytics"]
 kotest = ["io-kotest-junit", "io-kotest-assertions"]
 lifecycle = ["lifecycle-compose", "lifecycle-viewmodel-ktx", "lifecycle-runtime-ktx", "lifecycle-runtime-compose", "lifecycle-service"]
 square = ["square-retrofit2", "square-retrofit2-converter-gson", "square-retrofit2-converter-scalars", "square-okhttp3-intercepter"]
 testing = ["jUnit", "junit-jupiter-api", "io-mockk"]
+tensorflow-lite = ["tensorflow-lite-support", "tensorflow-lite-gpu"]
 playInAppUpdate = ["play-app-update", "play-app-update-ktx"]
