fix: stt + 번역 로직 수정
# stt 로직

1. 갤러리에서 비디오 아이템 선택 -> 포그라운드 서비스 시작
2. 선택된 비디오의 자막 파일이 있는지 확인
3. 없다면, 비디오에서 추출된 오디오가 있는지 확인
4. 없다면, 오디오 추출
4-1. 추출된 오디오 파일을 whisper 모델로 STT(음성 -> 텍스트 변환)
4-1-1. 변환된 자막을 언어 코드값에 맞게 translation(번역)
4-2. 만약, 기존에 STT 로 변환된 자막 파일이 있다면 STT 를 스킵하고 언어 코드에 맞게 번역 수행
5. 자막 파일 uri 를 가지고 player 화면으로 deeplink 처리 후 포그라운드 서비스 종료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter>
-                <data android:scheme="https" android:host="aideo_app" />
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="aideo" android:host="player" />
             </intent-filter>
         </activity>
 
