fix : 플레이어 파트 수정
- 자막 활성화
- UI/UX 수정(실제 비디오 플레이어와 유사한 UI/UX)
- 딥링크 활성화(포그라운드 서비스로 자막 파일 생성 후 노티 띄우고, 노티 클릭시 딥링크로 플레이어 화면으로 이동)
- 번역 API 를 google cloud 의 rest api -> mlKit 으로 변경
- 사용되지 않는 파일들 제거

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,12 @@
     <uses-permission
         android:name="android.permission.POST_NOTIFICATIONS"
         android:minSdkVersion="33" />
-    <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" 
-        android:maxSdkVersion="32" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="com.android.vending.BILLING" />
+    <uses-permission
+        android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC"
+        android:minSdkVersion="34" />
+
 
     <application
         android:name=".AideoApplication"
@@ -35,11 +38,19 @@
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="aideo" android:host="player" />
+
+                <data
+                    android:scheme="aideo"
+                    android:host="app"
+                    android:pathPrefix="/player"/>
             </intent-filter>
         </activity>
 
         <service android:name=".update.InAppUpdateService" />
+        <service
+            android:name="jinproject.aideo.gallery.TranscribeService"
+            android:exported="false"
+            android:foregroundServiceType="dataSync" />
     </application>
 
 </manifest>
