--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,6 +26,7 @@ kotlinx-immutable = "0.3.6"
 kotlinx-serialzation-json = "1.7.2"
 lifecycle = "2.6.1"
 lifecycle-common = "2.6.1"
+liteRT = "1.0.1"
 lottie = "6.3.0"
 mockk = "1.13.5"
 mlKit = "17.0.3"
@@ -35,8 +36,8 @@ playInApp = "2.1.0"
 protobuf = "3.25.0"
 retrofit = "3.0.0"
 room = "2.7.1"
-tensorflowLiteSupport = "0.5.0"
-tensorflowLiteGpu = "2.17.0"
+tensorflowLiteSupport = "0.4.4"
+tensorflowLite = "2.15.0"
 
 # plugin
 agp = "8.6.0"
@@ -64,6 +65,9 @@ gradle-room = { module = "androidx.room:room-gradle-plugin", version.ref = "room
 activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activity" }
 appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appCompat" }
 core-ktx = { module = "androidx.core:core-ktx", version.ref = "coreKtx" }
+
+# AI
+ai-edge-liteRT = { module = "com.google.ai.edge.litert:litert", version.ref = "liteRT" }
 
 # Billing
 billing-client = { group = "com.android.billingclient", name = "billing", version.ref = "billing" }
@@ -98,15 +102,6 @@ dagger-hilt-android-test = { group = "com.google.dagger", name = "hilt-android-t
 # Datastore
 datastore = { group = "androidx.datastore", name = "datastore", version.ref = "datastore" }
 
-# Media3
-media3-exoplayer = { group = "androidx.media3", name = "media3-exoplayer", version.ref = "media3" }
-media3-common = { group = "androidx.media3", name = "media3-common", version.ref = "media3" }
-media3-common-ktx = { group = "androidx.media3", name = "media3-common-ktx", version.ref = "media3" }
-media3-effect = { group = "androidx.media3", name = "media3-effect", version.ref = "media3" }
-media3-extractor = { module = "androidx.media3:media3-extractor", version.ref = "media3" }
-media3-transformer = { group = "androidx.media3", name = "media3-transformer", version.ref = "media3" }
-media3-ui-compose = { group = "androidx.media3", name = "media3-ui-compose", version.ref = "media3" }
-
 # Firebase
 firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebaseBom" }
 firebase-analytics = { group = "com.google.firebase", name = "firebase-analytics" }
@@ -132,6 +127,15 @@ lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-view
 
 # Lottie
 airbnb-android-lottie-compose = { group = "com.airbnb.android", name = "lottie-compose", version.ref = "lottie" }
+
+# Media3
+media3-exoplayer = { group = "androidx.media3", name = "media3-exoplayer", version.ref = "media3" }
+media3-common = { group = "androidx.media3", name = "media3-common", version.ref = "media3" }
+media3-common-ktx = { group = "androidx.media3", name = "media3-common-ktx", version.ref = "media3" }
+media3-effect = { group = "androidx.media3", name = "media3-effect", version.ref = "media3" }
+media3-extractor = { module = "androidx.media3:media3-extractor", version.ref = "media3" }
+media3-transformer = { group = "androidx.media3", name = "media3-transformer", version.ref = "media3" }
+media3-ui-compose = { group = "androidx.media3", name = "media3-ui-compose", version.ref = "media3" }
 
 # MLKit
 mlKit-translate = { module = "com.google.mlkit:translate", version.ref = "mlKit" }
@@ -172,8 +176,8 @@ test-espresso = { group = "androidx.test.espresso", name = "espresso-core", vers
 test-ext = { group = "androidx.test.ext", name = "junit", version.ref = "android-test-ext" }
 
 # Tensorflow-lite
+tensorflow-lite = { module = "org.tensorflow:tensorflow-lite", version.ref = "tensorflowLite" }
 tensorflow-lite-support = { group = "org.tensorflow", name = "tensorflow-lite-support", version.ref = "tensorflowLiteSupport" }
-tensorflow-lite-gpu = { group = "org.tensorflow", name = "tensorflow-lite-gpu", version.ref = "tensorflowLiteGpu" }
 
 [bundles]
 
@@ -188,5 +192,5 @@ lifecycle = ["lifecycle-compose", "lifecycle-viewmodel-ktx", "lifecycle-runtime-
 mlKit = ["mlKit-language", "mlKit-translate"]
 square = ["square-retrofit2", "square-retrofit2-converter-gson", "square-retrofit2-converter-scalars", "square-okhttp3-intercepter"]
 testing = ["jUnit", "junit-jupiter-api", "io-mockk"]
-tensorflow-lite = ["tensorflow-lite-support", "tensorflow-lite-gpu"]
+tensorflow-lite = ["tensorflow-lite-support", "tensorflow-lite"]
 playInAppUpdate = ["play-app-update", "play-app-update-ktx"]
