--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,6 +47,9 @@ jobs:
     - name: Create Local Properties
       run: echo '${{ secrets.LOCAL_PROPERTIES }}' >> ./local.properties
 
+    - name: Create google-services
+      run: echo '${{ secrets.GOOGLE_SERVICES_JSON_DEBUG }}' > ./app/google-services.json
+
     - name: Debug App Bundle
       run: ./gradlew assembleDebug -Duser.language=ko -Duser.country=KR
 
