--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,7 +57,7 @@ jobs:
       uses: slackapi/slack-github-action@v2.1.1
       with:
         method: files.uploadV2
-        token: ${{ secrets.SLACK_BOT_OAUTH }}
+        token: ${{ secrets.SLACK_BOT_TOKEN }}
         payload: |
           channel_id: ${{ secrets.SLACK_CHANNEL_ID }}
           initial_comment: "test"
