--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,8 +50,8 @@ jobs:
     - name: Create google-services
       run: echo '${{ secrets.GOOGLE_SERVICES_JSON_DEBUG }}' > ./app/google-services.json
 
-    - name: Debug App Bundle
-      run: ./gradlew assembleDebug -Duser.language=ko -Duser.country=KR
+    - name: Release App Bundle
+      run: ./gradlew assembleRelease -Duser.language=ko -Duser.country=KR
 
     - name: Send artifact to slack channel
       uses: slackapi/slack-github-action@v2.1.1
