--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ composeFoundation = "1.7.0"
 dagger = "2.53.1"
 datastore = "1.1.0"
 espresso = "3.5.1"
+executorchAndroid = "1.0.1"
 media3 = "1.8.0"
 firebaseBom = "33.8.0"
 gms-service-ads = "23.2.0"
@@ -98,6 +99,9 @@ dagger-hilt-android-test = { group = "com.google.dagger", name = "hilt-android-t
 
 # Datastore
 datastore = { group = "androidx.datastore", name = "datastore", version.ref = "datastore" }
+
+# Executorch
+executorch-android = { module = "org.pytorch:executorch-android", version.ref = "executorchAndroid" }
 
 # Firebase
 firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebaseBom" }
