fix: sherpa-onnx, sensevoice 통합 및 기능 개선

--- a/.gitignore
+++ b/.gitignore
@@ -181,4 +181,10 @@ fabric.properties
 
 !/gradle/wrapper/gradle-wrapper.jar
 
+*.wav
+*.onnx
+*.pte
+tokens.txt
+
+
 # End of https://www.toptal.com/developers/gitignore/api/android,androidstudio,kotlin
