--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,8 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
+            android:launchMode="singleTask"
+            android:taskAffinity="jinproject.aideo.app"
             android:theme="@style/Theme.Aideo">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -42,8 +44,6 @@
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-
                 <data
                     android:scheme="aideo"
                     android:host="app"
