feat: senseVoice 모델에 punctuation 결합
중국어와 영어에 대해서만 지원하는 ct-transformers 의 punctuation 모델을 sensevoice 에 결합.

whisper 는 별도 모델 없이 자체적으로 punctuation 이 괜찮음.

--- a/.gitignore
+++ b/.gitignore
@@ -181,11 +181,6 @@ fabric.properties
 
 !/gradle/wrapper/gradle-wrapper.jar
 
-*.wav
-*.onnx
-*.pte
-features/core/src/main/assets/models/*tokens.txt
-
-
+features/core/src/main/assets/
 
 # End of https://www.toptal.com/developers/gitignore/api/android,androidstudio,kotlin
