feat: SenseVoice 모델에 Qnn 빌드 구성 추가
- On_Device-Ai-Play 타겟팅 디바이스 추가
- product flavor 로 SoC 타겟팅 qnn 빌드한 sherpa-onnx runtime library 추가

--- a/.gitignore
+++ b/.gitignore
@@ -182,6 +182,7 @@ fabric.properties
 !/gradle/wrapper/gradle-wrapper.jar
 
 features/core/src/main/assets/
+features/core/src/htp*
 ai_pack/src/main/assets/
 bundletool.jar
 debug-install.apks
