fix: qnn 가속 모델 오류 개선

--- a/.gitignore
+++ b/.gitignore
@@ -186,5 +186,6 @@ features/core/src/htp*
 ai_pack/src/main/assets/
 bundletool.jar
 debug-install.apks
+buildAndInstallApksWithBundletool.sh
 
 # End of https://www.toptal.com/developers/gitignore/api/android,androidstudio,kotlin
