--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+    <uses-permission android:name="android.permission.ACCESS_ADSP"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission
         android:name="android.permission.POST_NOTIFICATIONS"
@@ -15,6 +15,7 @@
 
     <application
         android:name=".AideoApplication"
+        android:extractNativeLibs="true"
         android:allowBackup="true"
         android:icon="@drawable/ic_aideo_app_foreground"
         android:label="@string/app_name"
@@ -30,6 +31,9 @@
             android:name="com.google.mlkit.translation.DEPENDENCIES"
             android:value="translate_japenese, translate_korean">
         </meta-data>
+        <uses-native-library
+            android:name="libcdsprpc.so"
+            android:required="false"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
