refactor: 기존 번역(mlKit) -> flan-t5 모델(onnx) 변경

--- a/.gitignore
+++ b/.gitignore
@@ -187,5 +187,6 @@ ai_pack/src/main/assets/
 bundletool.jar
 debug-install.apks
 buildAndInstallApksWithBundletool.sh
+CLAUDE.md
 
 # End of https://www.toptal.com/developers/gitignore/api/android,androidstudio,kotlin
