fix: ai 모델 install time -> on-demand, fast-follow 변경
- 앱 설치 용량 줄이기 위해 음성 모델은 fast-follow, 번역 모델(m2m100) 은 on-demand 로 변경

--- a/.gitignore
+++ b/.gitignore
@@ -183,7 +183,7 @@ fabric.properties
 
 features/core/src/main/assets/
 features/core/src/htp*
-ai_pack/src/main/assets/
+ai_*/src/main/assets/
 bundletool.jar
 debug-install.apks
 buildAndInstallApksWithBundletool.sh
