--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.ACCESS_ADSP"/>
+
+    <uses-permission android:name="android.permission.ACCESS_ADSP" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission
         android:name="android.permission.POST_NOTIFICATIONS"
@@ -15,25 +16,25 @@
 
     <application
         android:name=".AideoApplication"
-        android:extractNativeLibs="true"
         android:allowBackup="true"
+        android:extractNativeLibs="true"
         android:icon="@drawable/ic_aideo_app_foreground"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@drawable/ic_aideo_app_foreground"
         android:supportsRtl="true"
         android:theme="@style/Theme.Aideo"
-        android:usesCleartextTraffic="true"
-        android:largeHeap="true">
+        android:usesCleartextTraffic="true">
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="${ADMOB_APP_ID}" />
         <meta-data
             android:name="com.google.mlkit.translation.DEPENDENCIES"
-            android:value="translate_japenese, translate_korean">
-        </meta-data>
+            android:value="translate_japenese, translate_korean"></meta-data>
+
         <uses-native-library
             android:name="libcdsprpc.so"
-            android:required="false"/>
+            android:required="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -49,15 +50,19 @@
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <data
-                    android:scheme="aideo"
                     android:host="app"
-                    android:pathPrefix="/player"/>
+                    android:pathPrefix="/player"
+                    android:scheme="aideo" />
             </intent-filter>
         </activity>
 
         <service android:name=".update.InAppUpdateService" />
         <service
             android:name="jinproject.aideo.gallery.TranscribeService"
+            android:exported="false"
+            android:foregroundServiceType="dataSync" />
+        <service
+            android:name=".PlayAIService"
             android:exported="false"
             android:foregroundServiceType="dataSync" />
     </application>
