--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -37,8 +37,8 @@ mlKit-languageId = "17.0.6"
 navigation = "2.8.7"
 oboe = "1.9.3"
 okhttp = "4.12.0"
+playAiDelivery = "0.1.1-alpha01"
 playInApp = "2.1.0"
-play-service-tflite = "16.4.0"
 protobuf = "3.25.0"
 retrofit = "3.0.0"
 room = "2.7.1"
@@ -165,6 +165,7 @@ google-oboe = { module = "com.google.oboe:oboe", version.ref = "oboe" }
 # Play In App
 play-app-update = { module = "com.google.android.play:app-update", version.ref = "playInApp" }
 play-app-update-ktx = { module = "com.google.android.play:app-update-ktx", version.ref = "playInApp" }
+play-ai-delivery = {module = "com.google.android.play:ai-delivery", version.ref = "playAiDelivery"}
 
 # Protobuf
 protobuf = { group = "com.google.protobuf", name = "protobuf-javalite", version.ref = "protobuf" }
