--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,7 @@ activity = "1.8.2"
 ads-interactive-media = "3.38.0"
 android-test-ext = "1.1.5"
 appCompat = "1.6.1"
-billing = "7.1.1"
+billing = "8.3.0"
 coreKtx = "1.12.0"
 coil = "2.5.0"
 composeAdaptive = "1.0.0"
@@ -42,6 +42,7 @@ playInApp = "2.1.0"
 protobuf = "3.25.0"
 retrofit = "3.0.0"
 room = "2.7.1"
+timber = "5.0.1"
 
 # plugin
 agp = "8.10.0"
@@ -194,6 +195,9 @@ junit-jupiter-engine = { group = "org.junit.jupiter", name = "junit-jupiter-engi
 test-espresso = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso" }
 test-ext = { group = "androidx.test.ext", name = "junit", version.ref = "android-test-ext" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+
+# Timber
+timber = {module = "com.jakewharton.timber:timber", version.ref = "timber"}
 
 [bundles]
 
