feat: 앱 게시 자동화
- git pre-hook 으로 main/develop 브랜치 push 발생시 모든 product flavor 에 대해 release bundle build 하여 아티팩트 각각 production/internal 로 게시 자동화

--- a/.gitignore
+++ b/.gitignore
@@ -188,5 +188,8 @@ bundletool.jar
 debug-install.apks
 buildAndInstallApksWithBundletool.sh
 CLAUDE.md
+key/
+build_logs/
+scripts/
 
 # End of https://www.toptal.com/developers/gitignore/api/android,androidstudio,kotlin
