docs: cd workflow 수정

--- a/.github/workflows/update_docs_workflows.yml
+++ b/.github/workflows/update_docs_workflows.yml
@@ -2,7 +2,7 @@ name: Update Documentations Workflows
 on: 
   push:
     branches: 
-           - master
+           - main
 jobs:
   extract_version:
     runs-on: ubuntu-latest
