--- a/.github/workflows/update_docs_workflows.yml
+++ b/.github/workflows/update_docs_workflows.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches: 
            - main
+permissions:
+  contents: write
+
 jobs:
   extract_version:
     runs-on: ubuntu-latest
