--- a/.github/workflows/update_docs_workflows.yml
+++ b/.github/workflows/update_docs_workflows.yml
@@ -5,6 +5,7 @@ on:
            - main
 permissions:
   contents: write
+  pull-requests: write
 
 jobs:
   extract_version:
@@ -59,10 +60,11 @@ jobs:
           sed -i "s/Kotlin-[0-9]\+\.[0-9]\+\.[0-9]\+/Kotlin-$KOTLIN_VERSION/" README.md
           sed -i "s/AGP-[0-9]\+\.[0-9]\+\.[0-9]\+/AGP-$AGP_VERSION/" README.md
 
-    - name: Commit and Push Changes
-      run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add app/build.gradle.kts README.md
-          git commit -m "🔄 Auto-increment versionCode & update README [skip ci]" || echo "No changes to commit"
-          git push
+    - name: Create Pull Request
+      uses: peter-evans/create-pull-request@v7
+      with:
+        commit-message: "docs: update README.md [skip ci]"
+        branch: auto-update/readme-${{ needs.extract_version.outputs.version_name }}
+        title: "docs: update README for v${{ needs.extract_version.outputs.version_name }}"
+        body: "Automated README badge updates for Release ${{ needs.extract_version.outputs.version_name }}"
+        add-paths: README.md
